--- a/draft.html
+++ b/draft.html
@@ -556,18 +556,18 @@ li .tab{
 
             <div class="container-9">
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="https://www.facebook.com/ONEOKROCK">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/oneokrockofficial/">Instagram</a></li>
-                    <li><a href="https://twitter.com/ONEOKROCK_japan">Twitter</a></li>
-                    <li><a href="https://www.oneokrock.com/en/">Google</a></li>
+                    <li><a href="https://www.facebook.com/Formula1">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/f1/">Instagram</a></li>
+                    <li><a href="https://twitter.com/F1">Twitter</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Formula_One">Google</a></li>
                     </a></li>
                   </ul>
                 </nav>
                   <ul class="sidenav grey lighten-2" id="mobile-menu">
-                    <li><a href="https://www.facebook.com/ONEOKROCK">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/oneokrockofficial/">Instagram</a></li>
-                    <li><a href="https://twitter.com/ONEOKROCK_japan">Twitter</a></li>
-                    <li><a href="https://www.oneokrock.com/en/">Google</a></li>
+                    <li><a href="https://www.facebook.com/Formula1">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/f1/">Instagram</a></li>
+                    <li><a href="https://twitter.com/F1">Twitter</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Formula_One">Google</a></li>
                   </ul>
             </div>
     
